--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ But it must have the following features:
 <head>
   <meta charset="UTF-8">
   <title>Motivational Poster</title>
-  <link rel="stylesheet" href="./solution.css" />
+  <link rel="stylesheet" href="./style.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap" rel="stylesheet">
@@ -30,9 +30,9 @@ But it must have the following features:
 <body>
   
   <div class="poster">
-    <img class="motivation-img" src="./assets/images/daenerys.jpeg" alt="Daenerys with egg">
+    <img class="motivation-img" src="./assets/images/bakersfield-1.png" alt="Daenerys with egg">
     <h1>Bakersfield</h1>
-    <p>Words and words</p>
+    <p>It aint for NOBODY</p>
   </div>
 </body>
 
